# Volumetric

./: .clang-tidy  .emacs  .gitignore  Cargo.toml  TODO  config.h.in  meson.build  meson_options.txt
Documentation/: RemoteFormat.md  Workflow.md
libvolumetric/: config.h.in  configuration.c  meson.build  volumetric.h
libvolumetric/volumetric/: archive.c  archive.h  configuration.c  configuration.h  directory.c  directory.h  docker.c  docker.h  extract.c  file.c  file.h  hash.c  hash.h  project-file.c  project-file.h  string-handling.c  volume.c  volume.h
libvolumetric/volumetric/docker/: container.c  internal.h  proxy.c  volume.c
libvolumetric/volumetric/volume/: archive.h
libvolumetric/volumetric/volume/archive/: commit.c  deser.c  lock-file.c  lock-file.h  status.c  versioning.c
libvremote/: Cargo.toml
libvremote/src/: command.rs  commit.rs  compressor.rs  file_remote.rs  hash.rs  lib.rs  persistence.rs  remote.rs  repository.rs  settings.rs  variant_error.rs  volume.rs  volumetric_remote.rs
libvremote/src/command/: add.rs  commit.rs  deploy.rs  external.rs  generate.rs  init.rs  status.rs
libvremote/src/remote/: file_remote.rs
libvremote/src/repository/: history.rs  lock.rs  object_store.rs  settings.rs  stage.rs
libvremote/src/repository/settings/: deployment_policy.rs  setters.rs
libvremote/src/volumetric_remote/: hash.rs  volume.rs
libvruntime/: Cargo.toml
libvruntime/src/: docker.rs  error.rs  lib.rs  podman.rs
rust-tool/: Cargo.toml  README.md
rust-tool/src/: add.rs  configuration.rs  volume.rs
serde_history/: Cargo.toml
serde_history/src/: lib.rs
src/: external.rs  init.rs  main.rs
volumetric/: Cargo.toml  README.md  TODO  add-packaged.c  argparse.c  argparse.h  config.h.in  configuration.c  configuration.h  main.c  meson.build  meson_options.txt  subcommand.h  versioning.c  versioning.h  volumetric.c  volumetric.service
volumetric-checkout/: main.c  meson.build  volumetric.service
volumetric-commit/: main.c  meson.build
volumetric-diff/: directory.c  main.c  meson.build  string-handling.c  string-handling.h
volumetric-diff/volumetric-diff/: main.c  string.c
volumetric-driver/: README.md  meson.build
volumetric-driver/source/: main.c
volumetric-driver/test/: ev-server.c  libevent-server.c
volumetric-remote/: volumetric-remote.c
volumetric/source/: configuration.c  configuration.h  docker.c  docker.h  file.c  hash.c  hash.h  main.c  versioning.c  versioning.h  volume.c  volume.h
volumetric/src/: arguments.rs  main.rs  subcommands.rs
volumetric/src/subcommands/: add.rs  commit.rs  config.rs  deploy.rs  external.rs  generate.rs  init.rs  status.rs
volumetric/volumetric/: configuration.c  docker.c  extract.c  extract.h  hash.c  main.c  versioning.c
